--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.7",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.0",
     "promise.prototype.finally": "^3.1.0",
