--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "minimist": "^1.2.5",
     "morgan": "^1.9.0",
     "promise.prototype.finally": "^3.1.0",
     "sequelize": "^5.21.2",
